test_case/rust-lang_rust/56765_447039459_39.rs
\n\nSince `MyStruct` is a type that is not marked `Copy`, the data gets moved out\nof `x` when we set `","highlight_start":10,"highlight_end":13}],"label":"value used here after move","suggested_replacement":null,"suggestion_applicability":null,"expansion":null},{"file_name":"/checkout/src/test/ui/binop/binop-consume-args.rs","byte_start":1517,"byte_end":1520,"line_start":46,"line_end":46,"column_start":5,"column_end":8,"is_primary":false,"text":[{"text":"    lhs & rhs;","highlight_start":5,"highlight_end":8}],"label":"value moved here","suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"children":[{"message":"move occurs because `lhs` has type `A`, which does not implement the `Copy` trait","code":null,"level":"note","spans":[],"children":[],"rendered":null}],"rendered":"error[E0382]: use of moved value: `lhs`\n  --> /checkout/src/test/ui/binop/binop-consume-args.rs:47:10\n   |\nLL |     lhs & rhs;\n   |     --- value moved here\nLL |     drop(lhs);  //~ ERROR use of moved value: `lhs`\n   |          ^^^ value used here after move\n   |\n   = note: move occurs because `lhs` has type `A`, which does not implement the `Copy` trait\n\n"}
[00:47:45] {"message":"use of moved value: `rhs`","code":{"code":"E0382","explanation":"\nThis error occurs when an attempt is made to use a variable after its contents\nhave been moved elsewhere. For example:\n\n